test/compile_errors/err_compiler_tool_capability_field_access.w
//! expect-error: tool capability fields are private; use capability methods instead

use std.compiler

fn leak_token(source: SourceEmitter) -> str:
    source.token

fn main:
    print("unreachable")
